@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.1.2-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Fri Jan 25 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
 - Moved temporary aggregate CA certs reference files used by
   pki_cert_sync out of the target directory. These temporary
